fix: Add equal heights to skill boxes using flexbox align-items: stretch

--- a/style.css
+++ b/style.css
@@ -306,7 +306,10 @@ section {
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
-    height: fit-content;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .section-container{
